--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           userId: 2501563
           sessionCookie: ${{ secrets.AOC_SESSION }}
+          year: 2024
       - uses: stefanzweifel/git-auto-commit-action@v5 # use v5
         with:
           commit_message: Update README stars
